# spritefire

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.css  devnotes.md  go.mod  go.sum
.github/workflows/: build.yaml  build.yml  go.yml  goBuildMac.yml  go_build_mac.yml  main.yml
ae/: resolution_switcher.aep
cpp/: CMakeLists.txt  main.cpp
cpp/sprite/: spriteDatabase.cpp
cpp/spritefire/: CMakeLists.txt
cpp/spritefire/include/png++/: error.hpp
cpp/spritefire/src/main/: main.cpp
cpp/spritefire/src/sprite/: db.cpp  db.h  resizeSprites.cpp
cpp/spritefire/src/utils/: color.cpp  color.h  indexedSprite.h  paths.h  point.h  resolution.h  storage.cpp  storage.h
cpp/spritefire/src/video/: sequence.cpp  sequence.h
cpp/spritefire/utils/: color.h  point.h
go/: go.mod
go/src/main/: main.go
go/src/mosaic/: draw.go
go/src/sprite/: database.go
go/src/util/: customStruct.go  path.go  storage.go
spritefi-rs/: Cargo.toml  index.html
spritefi-rs/src/: char_emoji.rs  db.rs  lib.rs  main.rs
spritefire/: .gitignore  Cargo.toml  README.md  index.html
spritefire/spritefire/src/: db.rs  emoji.rs  lib.rs
spritefire/spritefire_web/: Cargo.toml  build.rs  index.html
spritefire/spritefire_web/pkg/: spritefire_web_bg.wasm
spritefire/spritefire_web/src/: lib.rs
spritefire/src/: db.rs  desktop.rs  emoji.rs  image_utils.rs  lib.rs  main.rs  render.rs  render_scratch.rs  shader.wgsl
spritefire_web/: build.rs  index.html
spritefire_web/pkg/: spritefire_web_bg.wasm
src/main/: main.go
src/mosaic/: canvas.go  draw.go  kd.go  matchAndDraw.go
src/search/: kd.go
src/sprite/: database.go  resize.go
src/util/: color.go  customStruct.go  path.go  resolution.go  storage.go  time.go
src/video/: batchResSequence.go  sequence.go
