[package]
name = "spritefire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
fixed = "1.27.0"
image = "0.25.0"
kdtree = "0.7.0"
kiddo = { version = "4.2.0", features = ["serialize"] }
serde = { version = "1.0.197", features = ["derive"] }
postcard = { version = "1.0.0", features = ["alloc"] }
