[package]
name = "spritefire_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
spritefire = { path = "../spritefire" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.69", features = ["ImageData"] }
wasm-bindgen = "0.2.92"
image = "0.25.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[build-dependencies]
spritefire = { path = "../spritefire" }
